<resources>
    <string name="app_name">Calculator</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="opening_bracket">(</string>
    <string name="closing_bracket">)</string>
    <string name="equal_sign">=</string>
    <string name="point">.</string>
    <string name="delete_all">AC</string>
    <string name="delete_one_position">back</string>
</resources>